# ML_VK

./: CMakeLists.txt  MAKEFILE  Makefile  README.md  input.txt  main.c  output.txt
.github/workflows/: ci.yml
device_type/: CMakeLists.txt  device_type.c  device_type.h
dz2d/: CMakeLists.txt  dz2_lib.c  dz2_lib.h
dz2s/: CMakeLists.txt  dz2_lib.c  dz2_lib.h
my_string/: CMakeLists.txt  my_string.c  my_string.h
my_task/: CMakeLists.txt  my_task.c  my_task.h
storage_device/: CMakeLists.txt  storage_device.c  storage_device.h
tests/: CMakeLists.txt  test.cpp
