cmake_minimum_required(VERSION 3.0.0)
project(my_string)

set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-g -O0 -Wall -W -fprofile-arcs -ftest-coverage")

set(MY_STRING_LIBRARIES)
set(MY_STRING_INCLUDE_DIRS)

file(GLOB SOURCES *.c)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(MY_STRING_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(MY_STRING_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

IF(LINTER)
    set(CMAKE_C_CPPCHECK "cppcheck")
ENDIF()

