cmake_minimum_required(VERSION 3.0.0)
project(my_task)

set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-g -O0 -Wall -W -fprofile-arcs -ftest-coverage")
set(MY_TASK_LIBRARIES)
set(MY_TASK_INCLUDE_DIRS)

file(GLOB SOURCES *.c)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(MY_TASK_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(MY_TASK_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

IF(LINTER)
    set(CMAKE_C_CPPCHECK "cppcheck")
ENDIF()

target_include_directories(${PROJECT_NAME} 
PUBLIC ${MY_STRING_INCLUDE_DIRS}
PUBLIC ${DEVICE_TYPE_INCLUDE_DIRS}
PUBLIC ${STORAGE_DEVICE_INCLUDE_DIRS})
 
target_link_libraries(${PROJECT_NAME} 
PRIVATE ${MY_STRING_LIBRARIES}
PRIVATE ${DEVICE_TYPE_LIBRARIES}
PRIVATE ${STORAGE_DEVICE_LIBRARIES})